<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="500dp">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingBottom="20dp"
            android:background="#FF263238"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp" />
            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/exit"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="远程播放列表"
                android:textSize="14sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/remote_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="输入M3U8链接"
                android:textSize="12sp"
                android:focusable="true"
                android:focusableInTouchMode="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/update_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="立即更新" />
                <TextView
                    android:id="@+id/update_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>
            <Switch
                android:id="@+id/switch_channel_reversal"
                android:text="@string/title_channel_reversal"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Switch
                android:id="@+id/switch_channel_num"
                android:text="@string/title_channel_num"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Switch
                android:id="@+id/switch_time"
                android:text="@string/title_time"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Switch
                android:id="@+id/switch_boot_startup"
                android:text="@string/title_boot_startup"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>